# job-ready-10min-chunks

./: .env.example  =3.0.0  AGENT_READY_SUMMARY.md  AGENT_VERIFICATION_REPORT.md  AgenticConfigResearch.bat  AgenticConfigResearch.sh  BUILD_README.md  COMPLEX_DATA_INTEGRATION_ANALYSIS.md  DOUBLE_CLICK_GUIDE.md  FINAL_VERIFICATION_REPORT.md  FIXES_APPLIED.md  INTERFACE_OVERVIEW.md  LAUNCH_SUMMARY.md  PYDANTIC_GUIDE.md  README.md  RESEARCH_DATA_QUALITY_DEMO.md  SYSTEM_OVERVIEW.md  USAGE_GUIDE.md  demo.py  demo_interface.py  gui_app.py  main.py  pydantic_quick_reference.py  pydantic_tutorial.py  pyproject.toml  quick_test.py  requirements.txt  requirements_minimal.txt  requirements_simple.txt  simple_examples.py  simple_launcher.py  start_gui.bat  start_gui.sh  start_gui_macos.command  start_system.py
Agentic Config Research.app/Contents/: Info.plist
agents/: config_research_agent.py  troubleshooting_ai.py
config/: mcp_config.json
configs/: settings.py
dashboard/: app.py
data/: complex_integration_analysis_results.json  research_data_quality_results.json  sample_links.txt
examples/: basic_usage.py  chat_integration_simulation.py  chat_interface_simulation.py  complex_data_integration_demo.py  research_data_quality_demo.py  sample_configurations.py  simple_data_quality_demo.py
src/: __init__.py
trading-learning-platform/: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  SETUP.md  deploy.sh  package-lock.json  package.json  tailwind.config.js  test-app.js
utils/: excel_processor.py  link_analyzer.py  pdf_parser.py  validation_engine.py
(+56 files in other folders)
