[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-config-research"
version = "1.0.0"
description = "Agentic AI system for configuration research and troubleshooting"
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.4",
    "openpyxl>=3.1.2",
    "PyPDF2>=3.0.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "websockets>=12.0",
    "anthropic>=0.8.1",
    "openai>=1.6.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "validators>=0.22.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88